CCMSPUI-761 | Created initial open-api-specification.yml for POST /api/v1/submissions endpoint.
