# bulk-claim-api/open-api-specification.yml
@@ -141,8 +141,38 @@ paths:
         '500':
           description: 'Internal server error'
 
+  /api/v1/submissions:
+    post:
+      summary:
+        Submits a claim in the format of CSV or XML, which is then processed and forwarded 
+        to the Claims API.
+      operationId: postSubmission
+      tags:
+        - submissions
+      responses:
+        '201':
+          description: 'Created'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SubmissionResponse'
+        '400':
+          description: 'Bad Request'
+        '401':
+          description: 'Unauthorized'
+        '403':
+          description: 'Forbidden'
+        '500':
+          description: 'Internal server error'
+
 components:
   schemas:
+    SubmissionResponse:
+      required:
+        - submission-id
+      properties:
+        submission-id:
+          type: string
     Item:
       required:
         - id
